--- a/ITMD_562/week11/bookapp/views/template.pug
+++ b/ITMD_562/week11/bookapp/views/template.pug
@@ -1,4 +1,9 @@
 doctype html
+
+- var title = "";
+- var author = "";
+- var numPages = 0;
+
 html
   head
     title Week 11 Assignment - Pug and UI Book API
